--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pacman
 Type: Package
 Title: Package Management Tool
-Version: 0.2.0
+Version: 0.3.0
 Date: 2012-06-03
 Authors@R: c(person("Tyler", "Rinker",
     role = c("aut", "cre", "ctb"),
@@ -13,10 +13,10 @@ Author: Tyler Rinker [aut, cre, ctb], Dason Kurkiewicz [aut, ctb]
 Maintainer: Tyler Rinker <tyler.rinker@gmail.com>
 Depends: R (>= 2.13.0)
 Imports: devtools
-Suggests: knitr, lattice, testthat, XML
+Suggests: knitr, lattice, testthat (>= 0.9.0), XML
 BugReports: https://github.com/trinker/pacman/issues?state=open
 Description: Tools to more conveniently perform tasks
-    associated with add on packages.  pacman conveniently wraps library and
+    associated with add-on packages.  pacman conveniently wraps library and
     package related functions and names them in an intuitive and consistent
     fashion.  It seeks to combine functionality from lower level functions which
     can speed up workflow.
@@ -24,6 +24,6 @@ License: GPL-2
 URL: https://github.com/trinker/pacman
 VignetteBuilder: knitr
 NeedsCompilation: no
-Packaged: 2015-02-15 00:48:13 UTC; Tyler
+Packaged: 2015-02-19 16:35:18 UTC; Tyler
 Repository: CRAN
-Date/Publication: 2015-02-15 07:35:42
+Date/Publication: 2015-02-21 01:22:28
